// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderInline renders 0 1`] = `
Array [
  .c0 {
  border-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInline renders function 1`] = `
Array [
  .c0 {
  border-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInline renders invalid theme path 1`] = `
Array [
  .c0 {
  border-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInline renders negative number 1`] = `
Array [
  .c0 {
  border-inline: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInline renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-inline: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-inline: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-inline: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInline renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInline renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-inline: July;
}

@media May {
  .c0 {
    border-inline: August;
  }
}

@media April {
  .c0 {
    border-inline: September;
  }
}

@media January {
  .c0 {
    border-inline: November;
  }
}

@media April {
  .c0 {
    border-inline: August;
  }
}

@media June {
  .c0 {
    border-inline: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-inline: July;
}

@media May {
  .c0 {
    border-inline: August;
  }
}

@media April {
  .c0 {
    border-inline: September;
  }
}

@media January {
  .c0 {
    border-inline: November;
  }
}

@media April {
  .c0 {
    border-inline: August;
  }
}

@media June {
  .c0 {
    border-inline: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-inline: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline: November;
  }
}

@media April {
  .c0 {
    border-inline: January;
  }
}

@media January {
  .c0 {
    border-inline: December;
  }
}

@media April {
  .c0 {
    border-inline: April;
  }
}

@media June {
  .c0 {
    border-inline: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline: November;
  }
}

@media April {
  .c0 {
    border-inline: January;
  }
}

@media January {
  .c0 {
    border-inline: December;
  }
}

@media April {
  .c0 {
    border-inline: April;
  }
}

@media June {
  .c0 {
    border-inline: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInline renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-inline: July;
  }
}

@media April {
  .c0 {
    border-inline: August;
  }
}

@media January {
  .c0 {
    border-inline: September;
  }
}

@media April {
  .c0 {
    border-inline: November;
  }
}

@media June {
  .c0 {
    border-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-inline: July;
  }
}

@media April {
  .c0 {
    border-inline: August;
  }
}

@media January {
  .c0 {
    border-inline: September;
  }
}

@media April {
  .c0 {
    border-inline: November;
  }
}

@media June {
  .c0 {
    border-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline: January;
  }
}

@media April {
  .c0 {
    border-inline: December;
  }
}

@media January {
  .c0 {
    border-inline: April;
  }
}

@media April {
  .c0 {
    border-inline: May;
  }
}

@media June {
  .c0 {
    border-inline: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline: January;
  }
}

@media April {
  .c0 {
    border-inline: December;
  }
}

@media January {
  .c0 {
    border-inline: April;
  }
}

@media April {
  .c0 {
    border-inline: May;
  }
}

@media June {
  .c0 {
    border-inline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInline renders postitive number 1`] = `
Array [
  .c0 {
  border-inline: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInline renders string 1`] = `
Array [
  .c0 {
  border-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInline renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderInline renders valid theme path 1`] = `
Array [
  .c0 {
  border-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
